<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".activities.AboutUsActivity"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:layout_above="@id/adViewContainer"
            android:gravity="center">
            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="5dp"
                >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher_foreground"
                    android:contentDescription="@string/app_name"
                    />
                <TextView
                    android:id="@+id/textVersionName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/version_name"
                    android:textSize="22sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="@string/app_name"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/smartcare_service_description"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:layout_marginVertical="10dp"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/social_icons_header" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <ImageButton
                    android:id="@+id/btnTwitter"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="centerCrop"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/twitter_profile_desc"
                    android:src="@drawable/twitter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@color/white"/>
                <ImageButton
                    android:id="@+id/btnTelegram"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="centerCrop"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/telegram_channel_desc"
                    android:src="@drawable/telegram"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@color/white"/>
                <ImageButton
                    android:id="@+id/btnWhatsapp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="centerCrop"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/whatsapp_channel_desc"
                    android:src="@drawable/whatsapp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@color/white"/>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMore"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="More Apps"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="5dp"
                android:drawableTint="@color/purple_500"
                android:textColor="@color/purple_500"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/purple_500"
                app:strokeWidth="1dp"
                android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnShare"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="Share Our App"
                android:layout_margin="5dp"
                android:drawableTint="@color/purple_500"
                android:textColor="@color/purple_500"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/purple_500"
                app:strokeWidth="1dp"
                android:drawableEnd="@drawable/baseline_share_24"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRate"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="Rate Us"
                android:layout_margin="5dp"
                android:drawableTint="@color/purple_500"
                android:textColor="@color/purple_500"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/purple_500"
                app:strokeWidth="1dp"
                android:drawableEnd="@drawable/baseline_star_rate_24"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTerms"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="Terms Of Service"
                android:layout_margin="5dp"
                android:drawableTint="@color/purple_500"
                android:textColor="@color/purple_500"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/purple_500"
                app:strokeWidth="1dp"
                android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContact"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="Contact Us"
                android:layout_margin="5dp"
                android:drawableTint="@color/purple_500"
                android:textColor="@color/purple_500"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/purple_500"
                app:strokeWidth="1dp"
                android:drawableEnd="@drawable/baseline_chat_24"/>
        </LinearLayout>
        <FrameLayout
            android:id="@+id/adViewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"/>
</RelativeLayout>